<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.78"
         android:layout_margin="10sp"
         android:focusableInTouchMode="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusableInTouchMode="true" >

            <TextView
                android:id="@+id/textViewModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/model_uredjaja"
                android:textColor="@color/tekst1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <AutoCompleteTextView
                android:id="@+id/editTextModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text=""  >
            </AutoCompleteTextView>

            <TextView
                android:id="@+id/textViewSBU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serijski_broj_unutrasnje_jedinice"
                android:textColor="@color/tekst1"
                android:textAppearance="?android:attr/textAppearanceMedium" 
				android:layout_marginTop="10sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/editTextSBU"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10" />

                <Button
                    android:id="@+id/sbu_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/barcode"
                      />
                
            </LinearLayout>
            <TextView
                android:id="@+id/textViewSBS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serijski_broj_spoljne_jedinice"
                android:textColor="@color/tekst1"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                android:layout_marginTop="10sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/editTextSBS"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10" />

                <Button
                    android:id="@+id/sbs_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/barcode" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewAdresa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adresa_"
                android:textColor="@color/tekst1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="10sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/editTextAdresa"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10" />

                <Button
                    android:id="@+id/adresa_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/adres" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView5Telefon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefon_"
                android:textColor="@color/tekst1"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                android:layout_marginTop="10sp"/>
			
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/editTextTelefon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="phone" />

                <Button
                    android:id="@+id/telefon_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tel" />
                
            </LinearLayout>

            <TextView
                android:id="@+id/textViewIme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ime_"
                android:textColor="@color/tekst1"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                android:layout_marginTop="10sp"/>

            <EditText
                android:id="@+id/editTextIme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewKorisnik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/korisnik_"
                android:textColor="@color/tekst1"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                android:layout_marginTop="10sp"/>

            <EditText
                android:id="@+id/editTextKorisnik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/opcije"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" 
        android:background="@drawable/blue_gradient" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <Button
                android:id="@+id/radninalog_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:text="@string/radni_nalozi" />

            <Button
                android:id="@+id/zakljuci_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:text="@string/zaklju_i" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
            <Button
                android:id="@+id/sacuvaj_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:text="@string/sa_uvaj"/>

            <Button
                android:id="@+id/obrisi_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:text="@string/obrisi" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>